--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,5 +1,8 @@
+
 arb-dir: assets/l10n
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
+
+output-dir: lib/l10n
 
 untranslated-messages-file: untranslatedMessages.txt
