--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.9.1+14
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=3.2.0 <4.0.0"
+  flutter: ">=3.16.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -27,11 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  camera: null
+  camera: ^0.10.0
   camera_platform_interface: ^2.4.1
   device_info_plus: ^9.0.1
   dynamic_color: ^1.6.5
-  file_picker: ^5.0.1
+  file_picker: ^8.0.0
   flutter:
     sdk: flutter
   flutter_android_volume_keydown: ^1.0.0
@@ -39,26 +40,30 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   image: ^4.0.15
-  intl: ^0.18.0
+  intl: ^0.20.2
   native_device_orientation: ^1.1.4
-  package_info_plus: ^4.0.1
-  permission_handler: ^10.0.0
+  package_info_plus: ^8.0.0
+  permission_handler: ^12.0.0
   provider: ^6.0.3
   screen_brightness: ^0.2.2
   shared_preferences: ^2.0.15
   smooth_page_indicator: ^1.0.0+2
   url_launcher: ^6.1.6
   video_thumbnail: ^0.5.3
-  wakelock: ^0.6.2
+  wakelock_plus: ^1.0.0
 
 dependency_overrides:
+  permission_handler: ^12.0.0
+  permission_handler_android: ^13.0.0
+
+# dependency_overrides:
   # Can be removed when
   # https://github.com/creativecreatorormaybenot/wakelock/pull/203 is merged.
-  wakelock_windows:
-    git:
-      url: https://github.com/timsneath/wakelock
-      ref: win32-v5
-      path: wakelock_windows
+  # wakelock_windows:
+  #   git:
+  #     url: https://github.com/timsneath/wakelock
+  #     ref: win32-v5
+  #     path: wakelock_windows
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.0
