feat: Implement LUT management and persistence features
- Added LUT selection and restoration functionality in LutProvider.
- Enhanced LutManager to dynamically discover and copy available LUTs.
- Introduced preferences for saving and retrieving selected LUT and its path.
- Updated capture control widget to remove video-related functionality.
- Created tests for image stream coordination and LUT manager initialization.
- Added a description CSV for the CINEMATIC_FILM LUT.
- Cleaned up asset declarations in pubspec.yaml.
- Removed unused video_thumbnail dependency.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,6 @@ dependencies:
   shared_preferences: ^2.0.15
   smooth_page_indicator: ^1.0.0+2
   url_launcher: ^6.1.6
-  video_thumbnail: ^0.5.3
   wakelock_plus: ^1.0.0
   flutter_gl: ^0.0.3
 
@@ -90,7 +89,7 @@ flutter:
   assets:
     - assets/images/
     - assets/Luts/
-    - lib/src/lut/
+    - lib/src/lut/lut_shader.glsl
   generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
