--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   file_picker: ^8.0.0
   flutter:
     sdk: flutter
+  path: ^1.9.0
   flutter_android_volume_keydown: ^1.0.0
   flutter_image_compress: ^2.0.1
   flutter_localizations:
@@ -93,6 +94,8 @@ flutter:
   assets:
     - assets/images/
     - assets/Luts/
+    # Include subdirectories explicitly so Flutter bundles nested LUTs
+    - assets/Luts/CINEMATIC_FILM/
     - lib/src/lut/lut_shader.glsl
   generate: true
   # The following line ensures that the Material Icons font is
