完全使用GPU（GLSL）实现2D cube绘制

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,6 +13,23 @@ subprojects {
   project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
 
+// Ensure all Android modules (including plugins) compile with a modern SDK.
+// This avoids AAPT errors like "resource android:attr/lStar not found" when
+// a plugin uses newer Material components but sets an older compileSdk.
+subprojects { subproject ->
+  afterEvaluate {
+    if ((subproject.plugins.hasPlugin('com.android.application') ||
+        subproject.plugins.hasPlugin('com.android.library')) &&
+        subproject.hasProperty('android')) {
+      subproject.android {
+        if (hasProperty('compileSdkVersion')) {
+          compileSdkVersion 34
+        }
+      }
+    }
+  }
+}
+
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
