--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,7 +96,8 @@ flutter:
     - assets/Luts/
     # Include subdirectories explicitly so Flutter bundles nested LUTs
     - assets/Luts/CINEMATIC_FILM/
-    - lib/src/lut/lut_shader.glsl
+  shaders:
+    - shaders/gpu_lut.frag
   generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
