--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_image_compress: ^2.0.1
   flutter_localizations:
     sdk: flutter
+  http: ^1.1.0
   image: ^4.0.15
   intl: ^0.20.2
   native_device_orientation: ^1.1.4
@@ -51,6 +52,7 @@ dependencies:
   shared_preferences: ^2.0.15
   smooth_page_indicator: ^1.0.0+2
   url_launcher: ^6.1.6
+  uuid: ^4.1.0
   wakelock_plus: ^1.0.0
   flutter_gl:
     path: third_party/flutter_gl-0.0.21
@@ -94,8 +96,6 @@ flutter:
   assets:
     - assets/images/
     - assets/Luts/
-    # Include subdirectories explicitly so Flutter bundles nested LUTs
-    - assets/Luts/CINEMATIC_FILM/
   shaders:
     - shaders/gpu_lut.frag
   generate: true
