--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,30 +30,30 @@ environment:
 dependencies:
   camera: ^0.10.6
   camera_platform_interface: ^2.4.1
-  device_info_plus: ^9.0.1
-  dynamic_color: ^1.6.5
-  file_picker: ^8.0.0
+  device_info_plus: ^10.1.0
+  dynamic_color: ^1.6.8
+  file_picker: ^8.0.5
   flutter:
     sdk: flutter
   path: ^1.9.0
   flutter_android_volume_keydown: ^1.0.0
-  flutter_image_compress: ^2.0.1
+  flutter_image_compress: ^2.1.0
   flutter_localizations:
     sdk: flutter
-  http: ^1.1.0
-  image: ^4.0.15
+  http: ^1.2.1
+  image: ^4.2.0
   intl: ^0.20.2
   native_device_orientation: ^1.1.4
-  package_info_plus: ^8.0.0
-  path_provider: ^2.1.1
+  package_info_plus: ^8.0.2
+  path_provider: ^2.1.4
   permission_handler: ^12.0.0
-  provider: ^6.0.3
+  provider: ^6.1.2
   screen_brightness: ^0.2.2
-  shared_preferences: ^2.0.15
-  smooth_page_indicator: ^1.0.0+2
-  url_launcher: ^6.1.6
-  uuid: ^4.1.0
-  wakelock_plus: ^1.0.0
+  shared_preferences: ^2.3.2
+  smooth_page_indicator: ^1.1.0
+  url_launcher: ^6.3.0
+  uuid: ^4.4.2
+  wakelock_plus: ^1.2.5
   flutter_gl:
     path: third_party/flutter_gl-0.0.21
 
@@ -74,9 +74,9 @@ dependency_overrides:
   #     path: wakelock_windows
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.13.0
-  flutter_lints: ^2.0.0
-  flutter_native_splash: ^2.2.9
+  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^2.0.3
+  flutter_native_splash: ^2.4.1
   flutter_test:
     sdk: flutter
 
@@ -96,6 +96,7 @@ flutter:
   assets:
     - assets/images/
     - assets/Luts/
+    - assets/Luts/CINEMATIC_FILM/
   shaders:
     - shaders/gpu_lut.frag
   generate: true
