升级Android SDK到36，修复AI建议显示逻辑
- 升级compileSdk和targetSdk到36以解决插件兼容性问题
- 修复AI建议显示逻辑：
  - LUT建议持续显示直到下一条建议
  - 应用按钮保持可用状态直到新的LUT建议
  - 取景建议显示2秒后自动隐藏
  - 只在有内容时显示AI建议区域
- 解决android:attr/lStar资源链接错误
- 成功构建59.8MB的release APK

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,8 +22,9 @@ subprojects { subproject ->
         subproject.plugins.hasPlugin('com.android.library')) &&
         subproject.hasProperty('android')) {
       subproject.android {
-        if (hasProperty('compileSdkVersion')) {
-          compileSdkVersion 34
+        compileSdkVersion 36
+        if (hasProperty('targetSdkVersion')) {
+          targetSdkVersion 36
         }
       }
     }
